--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@linaria/core": "^6.2.0",
     "@linaria/react": "^6.2.1",
     "@tanstack/react-router": "^1.97.3",
+    "clsx": "^2.1.1",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^6.0.1",
     "react": "^19.0.0",
